--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,7 +18,7 @@ body {
     background-color: $blue;
 }
 
-.text-teal{
+.text-teal {
     color: $blue;
 }
 
@@ -39,7 +39,7 @@ body {
 
     li {
         &.slick-active {
-           background-color: $blue;
+            background-color: $blue;
         }
 
         background-color: $gray;
@@ -60,6 +60,28 @@ body {
         }
     }
 }
+
 .slick-arrow {
     display: none !important;
+}
+
+.slider-header {
+    height: 700px;
+    position: relative;
+    z-index: 0;
+    display: flex !important;
+    align-items: center;
+    &::before {
+        content: "";
+        position: absolute;
+        background: rgb(57,62,70);
+        background: linear-gradient(90deg, rgba(57,62,70,1) 0%, rgba(0,3,4,0.5158438375350141) 69%);
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+    &-content{
+        padding: 0 3rem;
+        z-index: 99;
+    }
 }
